# quarto-markdown

./: .git-blame-ignore-revs  Cargo.toml  LICENSE  README.md  notes.md
.github/workflows/: test-suite.yml
crates/biome_ungrammar/: Cargo.toml
crates/line_ending/: Cargo.toml
crates/line_ending/src/: lib.rs
crates/quarto-markdown-pandoc/: CLAUDE.md  Cargo.toml
crates/quarto-markdown-pandoc/fuzz/: Cargo.toml  README.md
crates/quarto-markdown-pandoc/fuzz/fuzz_targets/: hello_fuzz.rs
crates/quarto-markdown-pandoc/src/: errors.rs  lib.rs  traversals.rs
crates/quarto_markdown_factory/: Cargo.toml
crates/quarto_markdown_factory/src/: generated.rs
crates/quarto_markdown_pandoc/: CLAUDE.md  Cargo.toml  notes.md
crates/quarto_markdown_pandoc/doc/llm-gen/: overview.md
crates/quarto_markdown_pandoc/fuzz/: Cargo.toml
crates/quarto_markdown_pandoc/src/: errors.rs  filters.rs  lib.rs  main.rs  pandoc.rs  traversals.rs
crates/quarto_markdown_pandoc/src/pandoc/: attr.rs  block.rs  meta.rs  mod.rs  pandoc.rs  table.rs  treesitter.rs
crates/quarto_markdown_pandoc/src/readers/: mod.rs  qmd.rs
crates/quarto_markdown_pandoc/src/utils/: autoid.rs  concrete_tree_depth.rs  mod.rs  output.rs
crates/quarto_markdown_pandoc/src/writers/: json.rs  mod.rs  native.rs
crates/quarto_markdown_pandoc/tests/: test.rs  test_meta.rs
crates/quarto_markdown_pandoc/tests/corpus/commonmark/: 002.qmd
crates/quarto_markdown_pandoc/tests/corpus/markdown/: 003.qmd  004.qmd
crates/quarto_markdown_pandoc/tests/corpus/simple/: 002.qmd  005.qmd  006.qmd  007.qmd  013.qmd  014.qmd  015.qmd
crates/quarto_markdown_pandoc/tests/cursed/: 002.qmd
crates/quarto_markdown_pandoc/tests/features/metadata/: metadata.qmd
crates/quarto_markdown_pandoc/tests/invalid-syntax/: 001.qmd
crates/quarto_markdown_pandoc/tests/pandoc-differences/disallowed-in-qmd/: 001.qmd
crates/quarto_markdown_pandoc/tests/pandoc-match-corpus/commonmark/: 001.qmd  003.qmd  004.qmd
crates/quarto_markdown_pandoc/tests/pandoc-match-corpus/markdown/: 011.qmd  012.qmd  018.qmd  019.qmd  020.qmd  021.qmd  022.qmd  024.qmd  025.qmd  028.qmd  029.qmd  031.qmd  032.qmd  033.qmd  035.qmd  036.qmd
crates/quarto_markdown_pandoc/tests/scratch/: 005.qmd
crates/quarto_markdown_pandoc/tests/smoke/: 004.qmd  005.qmd  007.qmd  010.qmd  011.qmd  013.qmd  014.qmd  017.qmd
crates/quarto_markdown_pandoc/tests/snapshots/: 001.qmd.snapshot  002.qmd  002.qmd.snapshot  003.qmd  003.qmd.snapshot  004.qmd  006.qmd  006.qmd.snapshot  009.qmd.snapshot  010.qmd  011.qmd  011.qmd.snapshot
crates/quarto_markdown_pandoc/tests/writers/json/: codeblock.md  header.md  link.md  quoted.md  span.md
crates/quarto_markdown_parser/: Cargo.toml
crates/quarto_markdown_parser/src/: error.rs  lib.rs  options.rs  parse.rs  treesitter.rs
crates/quarto_markdown_syntax/: Cargo.toml
crates/quarto_markdown_syntax/src/: syntax_node.rs
crates/quarto_sexpr_factory/: Cargo.toml
crates/quarto_sexpr_factory/src/: generated.rs  lib.rs
crates/quarto_sexpr_pandoc/: Cargo.toml
crates/quarto_sexpr_pandoc/src/: main.rs
crates/quarto_sexpr_parser/: Cargo.toml
crates/quarto_sexpr_parser/src/: lib.rs  options.rs  parse.rs  treesitter.rs
crates/quarto_sexpr_parser/tests/: hello.rs
crates/quarto_sexpr_syntax/: Cargo.toml
crates/settings/: Cargo.toml
crates/settings/src/: indent_style.rs  indent_width.rs  lib.rs  line_ending.rs  line_width.rs  persistent_line_breaks.rs
crates/settings/src/snapshots/: settings__indent_width__tests__deserialize_oob_indent_width.snap  settings__line_width__tests__deserialize_oob_line_width.snap
crates/tests_macros/: Cargo.toml
crates/tree-sitter-qmd/: Cargo.toml  README.md  README.tree-sitter-md.md  notes.md
crates/tree-sitter-qmd/bindings/rust/: benchmark.rs  lib.rs  parser.rs
crates/tree-sitter-qmd/common/: common.js
crates/tree-sitter-qmd/tree-sitter-markdown/: .gitignore  grammar.js  log.html  markdown.dylib
crates/tree-sitter-qmd/tree-sitter-markdown-inline/: .gitignore  grammar.js  log.html  markdown-inline.dylib
crates/tree-sitter-qmd/tree-sitter-markdown-inline/docs/: syntax-notes.md
crates/tree-sitter-qmd/tree-sitter-markdown-inline/examples/cursed/: 001.md  002.md
crates/tree-sitter-qmd/tree-sitter-markdown-inline/queries/: injections.scm
crates/tree-sitter-qmd/tree-sitter-markdown-inline/scripts/: shortcode_generator.py
crates/tree-sitter-qmd/tree-sitter-markdown-inline/src/: grammar.json  node-types.json  parser.c  scanner.c
crates/tree-sitter-qmd/tree-sitter-markdown-inline/test/corpus/: attributes.txt  citation.txt  extension_latex.txt  extension_strikethrough.txt  failing.txt  footnotes.txt  issues.txt  qmd.txt  quotes.txt  shortcodes.txt  superscript.txt  syntax.txt  tildes.txt
crates/tree-sitter-qmd/tree-sitter-markdown-inline/test/pmd-examples/: try-all.py
crates/tree-sitter-qmd/tree-sitter-markdown-inline/test/qmd-examples/valid/: 001
crates/tree-sitter-qmd/tree-sitter-markdown/queries/: injections.scm
crates/tree-sitter-qmd/tree-sitter-markdown/src/: grammar.json  node-types.json  parser.c  scanner.c
crates/tree-sitter-qmd/tree-sitter-markdown/test/corpus/: extension_pipe_table.txt  issues.txt  qmd.txt  spec.txt
crates/tree-sitter-qmd/tree-sitter-markdown/test/examples/: 001.qmd
crates/tree-sitter-qmd/tree-sitter-markdown/test/scratch/: 001.qmd
crates/tree-sitter-sexpr/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
crates/wasm-qmd-parser/: Cargo.toml  LICENSE_MIT  index.html
docs/: notes.md  syntax-notes.md
pandoc-experiments/roundtripping/: _quarto.yml  index.qmd
xtask/codegen/: Cargo.toml  markdown.ungram  r.ungram  sexpr.ungram
xtask/codegen/src/: formatter.rs  generate_nodes.rs  generate_syntax_kinds.rs  js_kinds_src.rs  language_kind.rs  lib.rs  main.rs  r_json_schema.rs  r_kinds_src.rs  sexpr_kinds_src.rs
xtask/codegen/src/snapshots/: xtask_codegen__r_json_schema__tests__schema_can_be_generated_and_hasnt_changed.snap
(+70 files in other folders)
