[workspace]
members = [
    "crates/*",
    "crates/quarto-markdown-pandoc/fuzz",
]
resolver = "2"

[workspace.package]
authors = ["Posit Software, PBC"]
homepage = "https://github.com/posit-dev/quarto-markdown-syntax"
keywords = ["parser"]
categories = ["development-tools"]
license = "MIT"
repository = "https://github.com/posit-dev/quarto-markdown-syntax"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.89"
insta = "1.40.0"
memchr = "2.7.4"
proc-macro2 = "1.0.94"
schemars = "0.8.21"
serde = "1.0.215"
serde_json = "1.0.132"
toml = "0.8.19"

[workspace.dependencies.proc-macro-error2]
version = "2.0.1"
default-features = false

[workspace.dependencies.tests_macros]
path = "./crates/tests_macros"

[workspace.dependencies.tracing]
version = "0.1.40"
features = ["std"]
default-features = false

[workspace.dependencies.tree-sitter]
version = "0.25.8"

[workspace.dependencies.tree-sitter-qmd]
path = "./crates/tree-sitter-qmd"

[workspace.dependencies.tree-sitter-sexpr]
path = "./crates/tree-sitter-sexpr"

[workspace.dependencies.wasm-qmd-parser]
path = "./crates/wasm-qmd-parser"

[workspace.dependencies.quarto-markdown-pandoc]
path = "./crates/quarto-markdown-pandoc"


[workspace.lints.clippy]
assigning_clones = "warn"
cfg_not_test = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
implicit_clone = "warn"
implicit_hasher = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_not_returning_iterator = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_is_variant_and = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
no_effect_underscore_binding = "warn"
option_as_ref_cloned = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
string_lit_chars_any = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"
