[package]
name = "quarto_markdown_pandoc"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-qmd = { workspace = true }

[lints]
workspace = true
