[package]
name = "quarto_markdown_pandoc"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-qmd = { workspace = true }
regex = { version = "1.10.0", features = ["unicode"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
