[package]
name = "quarto_markdown_pandoc"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-qmd = { workspace = true }
regex = { version = "1.10.0", features = ["unicode"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
paste = "1.0.15"
once_cell = "1.21.3"

[lints]
workspace = true
