[package]
authors.workspace      = true
categories.workspace   = true
description            = "SyntaxKind and common rowan definitions for quarto_markdown_parser"
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
name                   = "quarto_markdown_syntax"
publish                = false
repository.workspace   = true
version                = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_rowan       = { workspace = true, features = ["serde"] }
biome_string_case = { workspace = true }
serde             = { workspace = true, features = ["derive"] }

[lints]
workspace = true
