[package]
name = "quarto-markdown-pandoc-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
yaml-rust2 = "0.10.3"

[dependencies.quarto-markdown-pandoc]
path = ".."

[[bin]]
name = "hello_fuzz"
path = "fuzz_targets/hello_fuzz.rs"
test = false
doc = false
bench = false
